<resources>
    <string name="app_name">MHike</string>
    <string name="hike_list">Hikes</string>
    <string name="add_hike">Add Hike</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="parking">Parking available</string>
    <string name="length_km">Length (km)</string>
    <string name="difficulty">Difficulty</string>
    <string name="description">Description (optional)</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="search_hint">Search hikes…</string>
    <string name="observations">Observations</string>
    <string name="add_observation">Add Observation</string>
    <string name="observation">Observation</string>
    <string name="comments">Comments (optional)</string>
    <string name="delete">Delete</string>
    <string name="delete_observation">Delete observation</string>
    <string name="delete_confirm_msg">Are you sure you want to delete this observation?</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="filters">Filters</string>
    <string name="name_optional">Name (optional)</string>
    <string name="location_optional">Location (optional)</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="min_length_km">Min length (km)</string>
    <string name="max_length_km">Max length (km)</string>
    <string name="min_difficulty">Min difficulty (1–5)</string>
    <string name="max_difficulty">Max difficulty (1–5)</string>
    <string name="parking_any">Any</string>
    <string name="parking_yes">Yes</string>
    <string name="parking_no">No</string>
    <string name="any">Any</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="add_photo">Add photo</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose photo</string>
</resources>